fdo#62176: Revert "n757419: Hidden/Non-wrapping text."

This reverts commit 0f8f92a5b6fcba1fef456539bb929819a9162a85.

Negative fo:text-indent values are explicitly allowed by ODF, so
whatever problem was worked around here needs to be fixed differently.

Conflicts:
	svx/source/unodraw/unoshape.cxx

Change-Id: I7e2ae38c4c950e37f0c96a32164a5b6ec10fd47d