svx/source/unodraw/unoshape.cxx
@@ -4246,18 +4246,11 @@ uno::Any SvxItemPropertySet_getPropertyValue( const SvxItemPropertySet& rPropSet
 
 void SvxItemPropertySet_setPropertyValue( const SvxItemPropertySet& rPropSet, const SfxItemPropertySimpleEntry* pMap, const uno::Any& rVal, SfxItemSet& rSet )
 {
-    uno::Any aVal(rVal);
     if(!pMap || !pMap->nWID)
         return;
 
     bool bDontConvertNegativeValues = ( pMap->nWID == XATTR_FILLBMP_SIZEX || pMap->nWID == XATTR_FILLBMP_SIZEY );
-    if( pMap->nWID == EE_PARA_LRSPACE ) // n#757419 Don't import negative values
-    {
-        sal_Int32 nVal = sal_Int32();
-        if( (aVal >>= nVal) && nVal < 0 )
-            aVal <<= ( sal_Int32 ) 0;
-    }
-    rPropSet.setPropertyValue( pMap, aVal, rSet, bDontConvertNegativeValues );
+    rPropSet.setPropertyValue( pMap, rVal, rSet, bDontConvertNegativeValues );
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
